@@ -39,6 +39,7 @@ gnulib_modules="
   tmpdir
   xalloc
   system
+  unlink
   "
 
 checkout_only_file=
