@@ -67,6 +67,7 @@ Using poke
 Dot-Commands
 * .load::                       Loading pickles.
 * .file::			Opening and closing IO spaces.
+* .editor::			Using an external editor for input.
 * .info::			Getting information about open files, etc.
 * .set::			Querying and setting global options.
 * .vm::				Poke Virtual Machine services.
@@ -430,6 +431,18 @@ use it to switch back to that file:
 (poke) .file #1
 The current file is now `foo.o'.
 @end example
+
+@node .editor
+@chapter .editor
+
+The @command{.editor} command (usually abbreviated as @command{.edit})
+invokes an external editor on a temporary file.  The user can then
+put contents on that file, save it and exit the editor.  At that point
+poke will read the file contents, turn them into a single line and
+execute them in the repl.
+
+The editor used is identified by the @code{EDITOR} environment
+variable.
 
 @node .info
 @chapter .info
